--- a/themes/fluid/layout/_partial/head.ejs
+++ b/themes/fluid/layout/_partial/head.ejs
@@ -21,7 +21,7 @@ if (page.title) {
   <meta name="author" content="<%= page.author || config.author %>">
   <meta name="keywords" content="<%= config.keywords %>">
   <title><%= title %></title>
-
+  <script src="https://cdn.jsdelivr.net/gh/SakuraNeko/live2d-widget@latest/autoload.js"></script>
   <%- partial('_partial/css.ejs') %>
   <%- js_ex(theme.static_prefix.internal_js, 'utils.js') %>
   <%- js_ex(theme.static_prefix.internal_js, 'color-schema.js') %>
